Stop links not showing up for books I've not reviewed yet

--- a/_sass/_listing.scss
+++ b/_sass/_listing.scss
@@ -5,7 +5,7 @@
   padding-bottom: 0.75rem;
 }
 
-.listing .title {
+a.listing a.title {
   text-decoration: underline;
 }
 
